# crypto-investment-analyzer-agent

./: .env.example  .gitignore  AGENTS.md  README.md  architecture.md  node_design.md  pyproject.toml  requirements.txt  state_design.md
src/crypto_investment_agentic_system/api/: app.py
src/crypto_investment_agentic_system/clients/: bithumb.py  news.py
src/crypto_investment_agentic_system/core/: config.py  logging.py
src/crypto_investment_agentic_system/graph/: builder.py  state.py
src/crypto_investment_agentic_system/graph/nodes/: context_builder.py  final_analysis.py  market_data.py  news_data.py  pre_analysis.py  ranker.py  selector.py
src/crypto_investment_agentic_system/schemas/: request.py  response.py
src/crypto_investment_agentic_system/services/: analysis.py  market_data.py  news.py
src/crypto_investment_agentic_system/utils/: time.py
tests/: test_setup.py
