[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crypto-investment-agentic-system"
version = "0.1.0"
description = "LangGraph and FastAPI based cryptocurrency investment analysis system."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=6.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_investment_agentic_system"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
packages = ["crypto_investment_agentic_system"]
